# tesserae-studio

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  install.ps1  install.sh
.github/workflows/: ci.yml  docker-publish.yml  publish-tesserae-studio-mcp.yml
examples/hello_stat/: client.js  plugin.json
examples/hello_stat/tests/: test_smoke.py
server/: pyproject.toml
server/studio_server/: __init__.py  app.py  bundle.py  cli.py  config.py  events.py  flatten.py  linter.py  mcp_server.py  mine.py  packager.py  proxy.py  publish.py  scaffold.py  source.py  sync.py  tesserae.py  workspace.py
server/studio_server/assets/schema/: plugin.schema.json
server/studio_server/assets/static/: spectra-chart.js
server/studio_server/assets/static/style/: base.css  forms.css  spectra-styles.css  spectra-tokens.css  spectra-widgets.css
server/tests/: test_cli.py  test_linter.py  test_mine.py  test_server.py
web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
web/public/: site.webmanifest
web/src/: api.js  api.test.ts  api.ts  catalog.ts  configForm.ts  connection.ts  editor.ts  editorInstance.ts  events.ts  lintPanel.ts  logic.test.ts  logic.ts  main.js  main.ts  mount.js  mount.ts  preview.ts  settings.ts  state.ts  style.css  template.ts  theme.ts  types.js  types.ts  ui.ts  workspace.ts
web/wysiwyg-parked/: README.md  codegen.ts  design.ts  model.ts
