[project]
name = "tesserae-studio-server"
version = "0.8.1"
description = "Thin local server for tesserae-studio: reverse-proxies a running Tesserae and hosts Studio's own API."
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "jsonschema>=4.0",
    "mcp>=1.2",
]

[project.scripts]
tesserae-studio = "studio_server.cli:main"
tesserae-studio-mcp = "studio_server.mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["studio_server*"]

# Vendored Tesserae assets (chrome CSS + fonts, Phosphor, chart runtime) so a
# non-editable / wheel install still ships them.
[tool.setuptools.package-data]
studio_server = ["assets/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
# The standalone MCP bridge under packages/ carries its own ruff config + CI.
extend-exclude = ["packages"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

# The MCP server ships a long-form agent instructions block (prose lines meant to
# read as sentences), so line-length doesn't apply there.
[tool.ruff.lint.per-file-ignores]
"studio_server/mcp_server.py" = ["E501"]

# FastAPI's dependency-injection defaults (Body/Depends/Query) are calls in
# argument defaults by design; they are not the B008 mutable-default hazard.
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Body", "fastapi.Depends", "fastapi.Query"]
